*2008/05/14
- New syntax program_entry_force
  Example:
  domain foo_t;
  program_entry_force /bin/foo;
  /bin/foo is assigned foo_t when executed from any domain.

*2008/03/19
 - New SPDL syntax "type".
 - Bugfix in load_policy for cross development

*2007/12/20
Fixed bug in audit2spdl

*2007/10/23
 - After install, only one reboot is necessary. 
- Added -d option to seedit-load.
*2007/10/22
 1) Now seedit-conveter does not use local file information.
 You can cross-develop policy for embedded devices.
 For non-embedded people, 
speed to convert SPDL to SELinux policy has become faster.
 
 2) /etc/selinux/seedit/contexts/files/customizable_types 
    is generated. Here, types that are used for file type transition is registered.

 3) Following options are added to seedit-conveter
   -c: <file>: Input label-file relationship for files that are labeled by file_type trans. Usually it is /usr/share/seedit/base_policy/dynamic_contexts.
   --more-warning: Show more warning useful to avoid misconfiguration.
   --disable-boolean: Do not output conditional policy
   --out-file_type_trans-context: Search local file tree and find files that are labeled by file_type_trans, and output list to file_contexts file.     

 4) For cross development install see INSTALL.cross

	
*2007/07/12
 Add -r <root> option for cross development.
   stat, opendir will use <root>/filename as input.

*2007/07/11
 Removed --busybox option support because this option is not useful.
 Add --disable-boolean option

*2007/07/06 
 Fixed initialize message for seedit-gui
 When uninstall, extra audit configuration is removed from audit.rules.

*2007/05/24 2.1.2
 - Support memory protection permissions for more security against buffer overrun attacks
   - Support execmem, execheap,execstack permissions.
     like,  allowpriv execmem; 
   - support execmod permission, you have to use file permission "m" to allow execmod.
   - Above permissions are only rarely used.
 - Added size optimize option: -t.