@@ -1,3 +1,6 @@
+*2008/10/20
+- allownet -protocol raw send,recv support
+
 *2008/05/14
 - New syntax program_entry_force
   Example:
